--- a/vote.html
+++ b/vote.html
@@ -218,7 +218,7 @@
                 <div class="checkbox">
                     <input class="square" type="checkbox" required name="terms">
                     <p class="text">
-                    <h3> I agree to the terms and conditions </h3>
+                    <h4> I agree to the terms and conditions </h4>
                     </p>
                     </label>
 
@@ -238,8 +238,13 @@
     <div class="publicity">
         <h1>Vote and get a free t-shirt</h1>
 
-    </div>
 
+        <span id="firstvote1" class="firstvote">
+            Vote for a change, </span>
+
+
+
+    </div>
 
 
 
@@ -255,7 +260,9 @@
     </footer>
 
 
+    <script src="design.js">
 
+    </script>
 </body>
 
 </html>
