--- a/vote.html
+++ b/vote.html
@@ -57,7 +57,7 @@
                 <input class="select_design" type="text" id="lname" name="lname"><br><br>
 
                 <p>Select your sex:</p>
-                <select class="select_design" required name="sex" id="sex">n
+                <select class="select_design" name="sex" id="sex">n
                     <option value="M">Male</option>
                     <option value="F">Female</option>
 
@@ -65,7 +65,7 @@
 
                 <p>Select your ethnicity:</p>
 
-                <select class="select_design" required name="ethnicity" id="eth">
+                <select class="select_design   name=" ethnicity" id="eth">
                     <option value="White">White</option>
                     <option value="Black">Black</option>
                     <option value="Spanish">Spanish</option>
@@ -74,7 +74,7 @@
 
 
                 <p>Select year of birth:</p>
-                <select class="select_design" required name="age" id="Age">
+                <select class="select_design" name="age" id="Age">
 
                     <option>year</option>
                     <option value="1900">1900</option>
@@ -204,7 +204,7 @@
                 </select>
 
                 <p> Choose your candidate</p>
-                <select class="select_design" re name="candidates" id="eth">
+                <select class="select_design" name="candidates" id="eth">
                     <option value="Trump">Trump</option>
                     <option value="Obama">Obama</option>
                     <option value="Bush">Bush</option>
