--- a/vote.html
+++ b/vote.html
@@ -20,6 +20,7 @@
                     <li class="linkvote"><a href="/" class="linkdesign">Online Voting </a></li>
                     <li class="linkvote"><a href="\" class="linkdesign">Make USA a better place</a></li>
                     <li class="linkvote"><a href="try01.html" class="linkdesign">Home Page</a></li>
+                    <li class="linkvote"><a href="try01.html" class="linkdesign">Blog</a></li>
                 </ul>
                 <div class="burger">
                     <div class="line1"></div>
@@ -51,7 +52,7 @@
 
 
 
-                <label aria-placeholder="First Name" for="fname">First Name:</label>
+                <label placeholder="First Name" for="fname">First Name:</label>
                 <input class="select_design" type="text" id="fname" name="fname"><br><br>
                 <label for="fname">Last Name:</label>
                 <input class="select_design" type="text" id="lname" name="lname"><br><br>
