--- a/vote.html
+++ b/vote.html
@@ -181,10 +181,10 @@
                 <button class="button" type="submit"> Submit </button>
 
                 <div class="checkbox">
-                    <input class="square" type="checkbox" required name="terms">
-                    <p class="text">
-                    <h4> I agree to the terms and conditions </h4>
-                    </p>
+                    <input class="text" type="checkbox" required name="terms">
+
+                    I agree to the terms and conditions
+
                     </label>
 
 
@@ -200,28 +200,13 @@
     </div>
 
 
-    <div class="publicity">
-        <h1></h1>
-
-
-
-        </span>
-
-
-
-    </div>
-
-
 
     </div>
 
 
     <footer>
 
-        <div class="footer">
-            Vote.USA
-            <p> </p>
-        </div>
+
     </footer>
 
 
