--- a/vote.html
+++ b/vote.html
@@ -86,6 +86,7 @@
                 </select>
 
 
+
                 <p></p>
 
                 <select class="select_design" name="age" id="Age">
@@ -94,7 +95,7 @@
 
 
                 </select>
-
+                <p id=" paragraph"> </p>
                 <p> </p>
                 <select class="select_design" name="candidates" id="eth">
                     <option value="" disabled selected>Select your Party</option>>
