--- a/vote.html
+++ b/vote.html
@@ -97,10 +97,18 @@
                 </select>
                 <p id=" paragraph"> </p>
                 <p> </p>
-                <select class="select_design" name="candidates" id="eth">
+                <select class="select_design" name="parties" id="party">
                     <option value="" disabled selected>Select your Party</option>>
-                    <option value="Trump">Democrat</option>
-                    <option value="Biden">Republic</option>
+                    <option value="Democratic">Democratic</option>
+                    <option value="Republican">Republican</option>
+
+                </select>
+
+
+                <p> </p>
+                <select class="select_design" name="State" id="st">
+
+
 
                 </select>
                 <button class="button" type="submit"> Submit </button>
