neew date format

--- a/vote.html
+++ b/vote.html
@@ -89,13 +89,13 @@
 
                 <p></p>
 
-                <select class="select_design" name="age" id="Age">
 
 
 
 
-                </select>
+                <input class="select_design" type="date" id="birthday" name="birthday">
                 <p id=" paragraph"> </p>
+
                 <p> </p>
                 <select class="select_design" name="parties" id="party">
                     <option value="" disabled selected>Select your Party</option>>
