--- a/vote.html
+++ b/vote.html
@@ -64,12 +64,13 @@
 
                 <input placeholder="Last Name" class="select_design" type="text" id="lname" name="lname"><br><br>
 
-
+                <input placeholder="Enter your age" class="select_design" type="text" id="lname" name="lname"><br><br>
                 <select class="select_design" name="sex" id="sex">
                     <option value="" disabled selected> Select your sex</option>>
 
                     <option value="M">Male</option>
                     <option value="F">Female</option>
+                    <option value="N">I prefer not to say</option>
 
                 </select>
 
@@ -93,10 +94,9 @@
 
 
 
-                <input class="select_design" type="date" id="birthday" name="birthday">
-                <p id=" paragraph"> </p>
 
-                <p> </p>
+
+
                 <select class="select_design" name="parties" id="party">
                     <option value="" disabled selected>Select your Party</option>>
                     <option value="Democratic">Democratic</option>
