--- a/vote.html
+++ b/vote.html
@@ -70,7 +70,7 @@
 
                     <option value="M">Male</option>
                     <option value="F">Female</option>
-                    <option value="N">I prefer not to say</option>
+                    <option value="N">I prefer not to say...</option>
 
                 </select>
 
