aws servers config

--- a/vote.html
+++ b/vote.html
@@ -60,9 +60,9 @@
 
 
 
-                <input placeholder="First Name" class="select_design" type="text" id="fname" name="fname"><br><br>
+                <input placeholder="Email" class="select_design" type="text" id="fname" name="fname"><br><br>
 
-                <input placeholder="Last Name" class="select_design" type="text" id="lname" name="lname"><br><br>
+
 
                 <input placeholder="Enter your age" class="select_design" type="text" id="lname" name="lname"><br><br>
                 <select class="select_design" name="sex" id="sex">
