deploying blog try

--- a/vote.html
+++ b/vote.html
@@ -24,7 +24,7 @@
 
                     <li class="linkvote"><a href="try01.html" class="linkdesign">Candidates</a></li>
 
-                    <li class="linkvote"><a href="try01.html" class="linkdesign">Blog</a></li>
+                    <li class="linkvote"><a href="blog.html" class="linkdesign">Blog</a></li>
 
 
                 </ul>
