--- a/vote.html
+++ b/vote.html
@@ -49,7 +49,7 @@
         <div class="line">
 
 
-            <form action="datasvoter.php" method="post">
+            <form action="index.php" method="post">
 
 
                 <div class="sentencewlcomedesign">
