--- a/vote.html
+++ b/vote.html
@@ -49,7 +49,7 @@
         <div class="line">
 
 
-            <form action="dtbconnect.js" method="post">
+            <form id="form">
 
 
                 <div class="sentencewlcomedesign">
@@ -144,6 +144,9 @@
 
 
     <script src="design.js">
+
+    </script>
+    <script src="dtbconnect.js">
 
     </script>
 </body>
