--- a/vote.html
+++ b/vote.html
@@ -60,11 +60,11 @@
 
 
 
-                <input placeholder="Email" class="select_design" type="text" id="fname" name="fname"><br><br>
+                <input placeholder="Email" class="select_design" type="text" id="email" name="fname"><br><br>
 
 
 
-                <input placeholder="Enter your age" class="select_design" type="text" id="lname" name="lname"><br><br>
+                <input placeholder="Enter your age" class="select_design" type="text" id="age" name="lname"><br><br>
                 <select class="select_design" name="sex" id="sex">
                     <option value="" disabled selected> Select your sex</option>>
 
