--- a/blog.html
+++ b/blog.html
@@ -2,11 +2,19 @@
 <html>
 
 <head>
-    <title>Page Title</title>
+
 </head>
 
 <body>
+    <header>
 
+
+        <title style="text-align: center;">
+            <h1> The Blog </h1>
+        </title>
+
+        <hr>
+    </header>
     <h1>My First Heading</h1>
     <p>My first paragraph.</p>
 
