--- a/blog.html
+++ b/blog.html
@@ -10,7 +10,7 @@
 
 
         <title style="text-align: center;">
-            <h1> The Blog </h1>
+            The Blog
         </title>
 
         <hr>
