--- a/blog.html
+++ b/blog.html
@@ -6,10 +6,10 @@
 </head>
 
 <body>
-    <header>
+    <header style="text-align: center;">
 
 
-        <title style="text-align: center;">
+        <title>
             The Blog
         </title>
 
