--- a/blog.html
+++ b/blog.html
@@ -11,7 +11,7 @@
 
 
         <h1>The Voter's Blog</h1>
-
+        <h3> <em>We encourage political conversations</em> </h3>
         <hr>
     </header>
 
