--- a/vote.html
+++ b/vote.html
@@ -18,7 +18,7 @@
             <div class="container">
                 <ul class="votenavcontents">
 
-                    <li class="linkvote"><a href="/" class="linkdesign">Online Voting </a></li>
+                    <li class="linkvote"><a href="/" class="linkdesign">Voting Center</a></li>
 
                     <li class="linkvote"><a href="\" class="linkdesign">Contact</a></li>
 
