new commit node js

--- a/public/vote.html
+++ b/public/vote.html
@@ -5,39 +5,36 @@
 <head>
     <!DOCTYPE html>
     <html lang="en">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
+</head>
+
+<header>
+    <nav class="vote_nav">
+
+        <div class="container">
+            <ul class="votenavcontents">
+
+                <li class="linkvote"><a href="/" class="linkdesign">Voting Center</a></li>
+
+                <li class="linkvote"><a href="\" class="linkdesign">Contact</a></li>
+
+                <li class="linkvote"><a href="try01.html" class="linkdesign">Candidates</a></li>
+
+                <li class="linkvote"><a href="subscribetoblog.html" class="linkdesign">Blog</a></li>
 
 
-    <head>
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="style.css">
-    </head>
-
-    <header>
-        <nav class="vote_nav">
-
-            <div class="container">
-                <ul class="votenavcontents">
-
-                    <li class="linkvote"><a href="/" class="linkdesign">Voting Center</a></li>
-
-                    <li class="linkvote"><a href="\" class="linkdesign">Contact</a></li>
-
-                    <li class="linkvote"><a href="try01.html" class="linkdesign">Candidates</a></li>
-
-                    <li class="linkvote"><a href="blog.html" class="linkdesign">Blog</a></li>
-
-
-                </ul>
-                <div class="burger">
-                    <div class="line1"></div>
-                    <div class="line2"></div>
-                    <div class="line3"></div>
-                </div>
+            </ul>
+            <div class="burger">
+                <div class="line1"></div>
+                <div class="line2"></div>
+                <div class="line3"></div>
             </div>
+        </div>
 
-        </nav>
+    </nav>
 
-    </header>
+</header>
 
 <body>
 
@@ -49,7 +46,8 @@
         <div class="line">
 
 
-            <form id="form">
+            <form style=" background-color: rgb(240, 241, 243); height: 610px; float: right;" id="form" action="/form"
+                method="post">
 
 
                 <div class="sentencewlcomedesign">
@@ -130,7 +128,7 @@
 
         </form>
 
-        <div id="dataContainer"> </div>
+        <div style="float: left;" id="dataContainer"> </div>
 
     </div>
 
@@ -139,11 +137,23 @@
     </div>
 
 
-    <footer>
+    <hr>
+    <span style="margin-left: 70px;height: 50%;">
+
+        <h4 style="margin-left: 60px;">
+            <ul style="list-style-type: circle;">
+                <li class="linkfooter"><a class="linkfooter" href="/">Voting</a></li>
+                <li class="linkfooter"><a class="linkfooter" href="/">Website Creator</a></li>
+                <li class="linkfooter"><a class="linkfooter" href="/">USA</a></li>
+                <li class="linkfooter"><a class="linkfooter" href="/">VOTING CENTER</a></li>
+            </ul>
 
 
-    </footer>
+        </h4>
 
+
+
+    </span>
 
     <script src="design.js">
 
