--- a/public/vote.html
+++ b/public/vote.html
@@ -46,7 +46,7 @@
         <div class="line">
 
 
-            <form style=" background-color: rgb(240, 241, 243); height: 610px; float: right;" id="form" action="/form"
+            <form style="   background-color: rgb(250, 250, 254); height: 600px; " id="form" action="/form"
                 method="post">
 
 
@@ -136,7 +136,7 @@
 
     </div>
 
-
+    <div style="height: 1100px;"> </div>
     <hr>
     <span style="margin-left: 70px;height: 50%;">
 
