--- a/public/vote.html
+++ b/public/vote.html
@@ -50,7 +50,7 @@
 
     <div class="titlectd">
         <span>
-            <h2> Presidential Elections Date</h2>
+            <h2> Presidential Elections Date Countdown</h2>
         </span>
     </div>
     <div class="countdown">
