--- a/public/vote.html
+++ b/public/vote.html
@@ -170,17 +170,14 @@
     </div>
 
     <input placeholder="Search your district..." class="mapsearchentry" id="pac-input" type="text" size="50">
-    <div id="map" style=" width: 1500px; height: 600px; margin: 0 auto;">
-
-
-        <script
-            src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCeiKzISzDN80MEsDEpHacEMPhsWZZVRqg&libraries=places"
-            defer>
-            </script>
-
-
-
-
+    <div id="map" style=" outline: auto;  width: 1500px; height: 600px; margin: 10px auto;">
+        <center>
+            <h1 style="color: green;">Map coming up soon,it will allow you to look for your district </h1>
+        </center>
+    </div>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCeiKzISzDN80MEsDEpHacEMPhsWZZVRqg&libraries=places"
+        defer>
+        </script>
 
 
 
@@ -188,27 +185,31 @@
 
 
 
-        <div style="height: 1100px;"> </div>
-        <hr>
-        <span style="margin-left: 70px;height: 50%;">
-
-            <h4 style="margin-left: 60px;">
-                <ul style="list-style-type: circle;">
-                    <li class="linkfooter"><a class="linkfooter" href="/">Voting</a></li>
-                    <li class="linkfooter"><a class="linkfooter" href="/">Website Creator</a></li>
-                    <li class="linkfooter"><a class="linkfooter" href="/">USA</a></li>
-                    <li class="linkfooter"><a class="linkfooter" href="/">VOTING CENTER</a></li>
-                </ul>
 
 
-            </h4>
 
-        </span>
-        <script src="ctd.js"></script>
-        <script src="design.js"> </script>
 
-        <script src="dtbconnect.js"></script>
-        <script src="map.js"></script>
+    <div style="height: 1100px;"> </div>
+    <hr>
+    <span style="margin-left: 70px;height: 50%;">
+
+        <h4 style="margin-left: 60px;">
+            <ul style="list-style-type: circle;">
+                <li class="linkfooter"><a class="linkfooter" href="/">Voting</a></li>
+                <li class="linkfooter"><a class="linkfooter" href="/">Website Creator</a></li>
+                <li class="linkfooter"><a class="linkfooter" href="/">USA</a></li>
+                <li class="linkfooter"><a class="linkfooter" href="/">VOTING CENTER</a></li>
+            </ul>
+
+
+        </h4>
+
+    </span>
+    <script src="ctd.js"></script>
+    <script src="design.js"> </script>
+
+    <script src="dtbconnect.js"></script>
+    <script src="map.js"></script>
 </body>
 
 </html>
