--- a/public/subscribetoblog.html
+++ b/public/subscribetoblog.html
@@ -13,11 +13,11 @@
         }
 
         body {
-            background-color: rgb(0, 0, 0);
+            background-color: rgb(220, 219, 219);
         }
 
         nav {
-            background-color: black;
+            background-color: rgb(220, 219, 219);
         }
 
         .submitnickname {
@@ -31,7 +31,7 @@
     </style>
 </head>
 
-<header style="background-color: black;">
+<header style="background-color: rgb(220, 219, 219);">
     <nav>
         <ul>
             <li> <a class="linktoothersite" href="vote.html">Home</a> </li>
