connection to database was succesful

--- a/public/vote.html
+++ b/public/vote.html
@@ -78,8 +78,8 @@
         <div class="line">
 
 
-            <form style="  background-color:  rgba(2, 2, 0, 0.015); height: 610px; " id="form" action="/form"
-                method="post">
+            <form style="  background-color:  rgba(2, 2, 0, 0.015); height: 610px; " id="form"
+                action="http://localhost:5501/form" method="post">
 
 
 
@@ -156,10 +156,10 @@
 
                 </div>
 
-
+            </form>
         </div>
 
-        </form>
+
 
         <div style="float: left;" id="dataContainer"> </div>
 
@@ -170,7 +170,7 @@
     </div>
 
     <input placeholder="Search your district..." class="mapsearchentry" id="pac-input" type="text" size="50">
-    <div id="map" style=" outline: auto;  width: 1500px; height: 600px; margin: 10px auto;">
+    <div id="map" style=" outline: auto;  width: 500px; height: 600px; margin: 10px auto;">
         <center>
             <h1 style="color: green;">Map coming up soon,it will allow you to look for your district </h1>
         </center>
