--- a/public/vote.html
+++ b/public/vote.html
@@ -110,7 +110,7 @@
                 <p></p>
 
 
-                <select class="select_design   name=" eth" id="eth">
+                <select class="select_design" name="eth" id="eth">
                     <option value="" disabled selected> Select your ethnicity</option>
 
                     <option value="White">White</option>
