--- a/public/vote.html
+++ b/public/vote.html
@@ -78,8 +78,8 @@
         <div class="line">
 
 
-            <form style="  background-color:  rgba(2, 2, 0, 0.015); height: 610px; " id="form"
-                action="http://localhost:5501/form" method="post">
+            <form style="  background-color:  rgba(2, 2, 0, 0.015); height: 610px; " id="form" action="form"
+                method="post">
 
 
 
