adding insta,linkedin,git logo

--- a/public/vote.html
+++ b/public/vote.html
@@ -9,7 +9,21 @@
     <link rel="stylesheet" href="style.css">
 
 
+    <style>
+        .linkedinpic {
+            width: 30px;
+            margin-top: 2px;
+            margin-left: 4px;
+        }
 
+        .instapic {
+            width: 30px;
+        }
+
+        .gitlogo {
+            width: 50px;
+        }
+    </style>
 
 
 
@@ -47,7 +61,20 @@
 </header>
 
 <body>
+    <a href=" https://www.linkedin.com/in/jerry-cami-jean-baptiste-02b00b205/">
+        <img class="linkedinpic" src="linkedin.png" alt="linkedin">
+    </a>
 
+
+    <a href="https://www.instagram.com/spiolittle/">
+        <img class="instapic" src="insta.png" alt="instagram">
+
+    </a>
+    <a href="https://github.com/Jerry-cmd-s/herokutry">
+        <img class="gitlogo" src="github.jpeg" alt="github
+        ">
+
+    </a>
     <div class="titlectd">
         <span>
             <h2> Presidential Elections Date Countdown</h2>
@@ -199,6 +226,7 @@
                 <li class="linkfooter"><a class="linkfooter" href="/">Website Creator</a></li>
                 <li class="linkfooter"><a class="linkfooter" href="/">USA</a></li>
                 <li class="linkfooter"><a class="linkfooter" href="/">VOTING CENTER</a></li>
+
             </ul>
 
 
