--- a/public/vote.html
+++ b/public/vote.html
@@ -105,7 +105,7 @@
         <div class="line">
 
 
-            <form style="  background-color:  rgba(2, 2, 0, 0.015); height: 610px; " id="form" action="form"
+            <form style="  background-color:  rgba(2, 2, 0, 0.015); height: 610px; " id="form" action='/form'
                 method="post">
 
 
