script added in jsonn package

--- a/public/vote.html
+++ b/public/vote.html
@@ -82,11 +82,9 @@
 
 <body>
 
-    <div class="titlectd">
-        <span>
+    <!-- <img style="width: 200px; height: 800px;" src="yesir.jpg" alt="ff"> -->
 
-        </span>
-    </div>
+
 
     <div class="page_content">
 
